Dashboard/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dqn-scaler-dashboard-service
  namespace: smart-scaler
  labels:
    app: dqn-scaler-dashboard
spec:
  type: ClusterIP
  ports:
  - port: 8077
    targetPort: 80
    protocol: TCP
  selector:
    app: dqn-scaler-dashboard
